--- a/SerialCommunicator/Controls/SerialItem.xaml
+++ b/SerialCommunicator/Controls/SerialItem.xaml
@@ -20,7 +20,7 @@
         <Button Margin="0,2,2,0" VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" Width="23" Height="24" Click="Button_Click"/>
         <Grid Margin="0,26,0,0">
             <Label Content="Connected:" HorizontalAlignment="Left" Margin="2 0 0 0" VerticalAlignment="Center"/>
-            <Label Content="{Binding SerialView.IsConnected, UpdateSourceTrigger=PropertyChanged}" Margin="74 0 0 0" VerticalAlignment="Center"/>
+            <Label Content="{Binding IsConnected, UpdateSourceTrigger=PropertyChanged}" Margin="74 0 0 0" VerticalAlignment="Center"/>
         </Grid>
     </Grid>
 </UserControl>
