Fixed SerialItems' Connected property not updating when SerialPort is reset

--- a/SerialCommunicator/MainWindow.xaml
+++ b/SerialCommunicator/MainWindow.xaml
@@ -177,7 +177,7 @@
                             </Grid>
                             <CheckBox IsChecked="{Binding SerialView.DataTerminalReady, UpdateSourceTrigger=PropertyChanged}" Content="Data Terminal Ready (DTR)" ToolTip="Data Terminal Ready (tell connected device it should be ready to do 'stuff')" Height="20" Margin="0,106,0,0" VerticalAlignment="Top"/>
                             <Separator Style="{DynamicResource VerticalSeparator}" HorizontalAlignment="Right" Margin="0,0,0,29"/>
-                            <ProgressBar IsIndeterminate="{Binding SerialView.WaitingStatus, UpdateSourceTrigger=PropertyChanged}" BorderThickness="1 1 0 1" Margin="0,131,100,0"/>
+                            <ProgressBar IsIndeterminate="{Binding SerialView.WaitingStatus, UpdateSourceTrigger=PropertyChanged}" Margin="0,131,105,0"/>
                             <Button Content="Reset SerialPort" HorizontalAlignment="Left" 
                                     Command="{Binding ResetSerialViewCommand}"
                                     Margin="75,131,0,0" 
