Updated UI a bit and fixed issues with transceiving filter/settings and added colours to SerialMessages. orange = alert, red = error, etc.

--- a/SerialCommunicator/Controls/SerialMessage.xaml
+++ b/SerialCommunicator/Controls/SerialMessage.xaml
@@ -3,18 +3,19 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             HorizontalAlignment="Left"
+             HorizontalAlignment="Stretch"
              HorizontalContentAlignment="Stretch"
              xmlns:local="clr-namespace:SerialCommunicator.Controls" 
              xmlns:viewmodels="clr-namespace:SerialCommunicator.ViewModels"
              mc:Ignorable="d" ToolTip="{Binding Time, StringFormat='hh:mm:ss tt'}">
     <Grid>
-        <TextBlock Text="{Binding RXorTX, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="1,4,0,4"/>
-        <TextBlock Text=">" VerticalAlignment="Center" Margin="40,4,0,4" HorizontalAlignment="Left" Width="8"/>
-        <Separator Style="{DynamicResource VerticalSeparator}" HorizontalAlignment="Left" Width="1" Margin="50,2,0,2"/>
+        <TextBlock Text="{Binding RXorTX, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" HorizontalAlignment="Left" Margin="2,0"/>
+        <TextBlock Text=">" VerticalAlignment="Center" Margin="36,4,0,4" HorizontalAlignment="Left" Width="8"/>
         <TextBox Text="{Binding Message, UpdateSourceTrigger=PropertyChanged}"
-                     TextWrapping="Wrap"
-                     Background="Transparent"
-                     Padding="1" Margin="53 2 0 2"/>
+                 TextWrapping="Wrap"
+                 Background="Transparent"
+                 BorderThickness="0 0 0 1"
+                 IsReadOnly="True"
+                 Padding="1" Margin="46,2,2,2"/>
     </Grid>
 </UserControl>
